Adicionar footer com copyright e ajustar altura responsiva da lista

--- a/index.html
+++ b/index.html
@@ -114,6 +114,17 @@
                 Limpar Todas
             </button>
         </footer>
+
+        <!-- Footer Copyright -->
+        <footer class="footer">
+            <p class="footer__copyright">© 2025 To-Do List. Todos os direitos reservados.</p>
+            <p class="footer__author">
+                Desenvolvido por 
+                <a href="https://github.com/dev-mateus" target="_blank" rel="noopener noreferrer" class="footer__link">
+                    Mateus
+                </a>
+            </p>
+        </footer>
     </div>
 
     <!-- Scripts -->
