Implementar altura dinâmica baseada em viewport e botão scroll to top

--- a/index.html
+++ b/index.html
@@ -143,6 +143,13 @@
         </footer>
     </div>
 
+    <!-- Scroll to Top Button -->
+    <button id="scrollTopBtn" class="scroll-top" aria-label="Voltar ao topo">
+        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" aria-hidden="true">
+            <polyline points="18 15 12 9 6 15"></polyline>
+        </svg>
+    </button>
+
     <!-- Scripts -->
     <script src="script.js" defer></script>
 </body>
